--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <h1>Learn Git</h1>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas veritatis tempore quod quaerat dolorum inventore voluptatem atque cumque illum ipsa quos ex ut velit, soluta, repellat vitae ad, deserunt labore.
+    </p>
 </body>
 </html>
